[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Portal/Portal.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Portal Sprite.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0902
height = 30.2622

[node name="Portal" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
